--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,19 +63,22 @@
     "    print(\"Unsolved:\", unsolved)\n",
     "    total_sum = sum([float(r[\"Time\"]) for r in data if r[\"Time\"] != \"--\"])\n",
     "    print(\"sum:\", total_sum + len(unsolved) * 300)\n",
+    "\n",
+    "    data = sorted(data, key=lambda x: x[\"Filename\"])\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unsolved: ['C1065_064.cnf', 'C1065_082.cnf', 'C1597_024.cnf', 'C1597_060.cnf', 'C1597_081.cnf', 'C175_145.cnf', 'C200_1806.cnf', 'C208_120.cnf', 'C210_55.cnf', 'C243_188.cnf', 'C289_179.cnf', 'C53_895.cnf', 'U50_4450_035.cnf', 'U75_1597_024.cnf']\n"
+      "Unsolved: ['C1065_064.cnf', 'C1065_082.cnf', 'C1597_024.cnf', 'C1597_060.cnf', 'C1597_081.cnf', 'C175_145.cnf', 'C200_1806.cnf', 'C208_120.cnf', 'C210_55.cnf', 'C243_188.cnf', 'C289_179.cnf', 'C53_895.cnf', 'U50_4450_035.cnf', 'U75_1597_024.cnf']\n",
+      "sum: 4800.25\n"
      ]
     },
     {
@@ -105,7 +108,7 @@
        " {'Filename': 'U75_1597_024.cnf', 'Time': '--'}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,14 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unsolved: ['C1597_024.cnf', 'C1597_060.cnf', 'C1597_081.cnf', 'C175_145.cnf', 'C200_1806.cnf']\n"
+      "Unsolved: ['C1597_024.cnf', 'C1597_060.cnf', 'C1597_081.cnf', 'C175_145.cnf', 'C200_1806.cnf']\n",
+      "sum: 2023.9700000000003\n"
      ]
     },
     {
@@ -142,7 +146,7 @@
        " {'Filename': 'C200_1806.cnf', 'Time': '--'}]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -192,63 +196,271 @@
        " {'Filename': 'U75_1597_024.cnf', 'Time': '134.16'}]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_filepath = \"./log/results-dppl2.log\"\n",
+    "log_filepath = \"./log/dpll2-dlcs.log\" # One-by-one runs\n",
     "compute_data_from_log(log_filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unsolved: ['C1597_024.cnf', 'C175_145.cnf', 'C200_1806.cnf', 'C243_188.cnf', 'C289_179.cnf', 'C53_895.cnf', 'U50_4450_035.cnf', 'U75_1597_024.cnf']\n",
-      "sum: 2846.63\n"
+      "Unsolved: ['C1597_060.cnf', 'C175_145.cnf', 'C200_1806.cnf', 'C243_188.cnf', 'C289_179.cnf', 'C53_895.cnf']\n",
+      "sum: 2415.17\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'Filename': 'C1065_064.cnf', 'Time': '63.30'},\n",
-       " {'Filename': 'C1065_082.cnf', 'Time': '42.39'},\n",
-       " {'Filename': 'C140.cnf', 'Time': '0.04'},\n",
-       " {'Filename': 'C1597_024.cnf', 'Time': '--'},\n",
-       " {'Filename': 'C1597_060.cnf', 'Time': '132.69'},\n",
-       " {'Filename': 'C1597_081.cnf', 'Time': '92.53'},\n",
-       " {'Filename': 'C168_128.cnf', 'Time': '0.98'},\n",
+       "[{'Filename': 'C1065_064.cnf', 'Time': '54.18'},\n",
+       " {'Filename': 'C1065_082.cnf', 'Time': '35.04'},\n",
+       " {'Filename': 'C140.cnf', 'Time': '0.05'},\n",
+       " {'Filename': 'C1597_024.cnf', 'Time': '188.32'},\n",
+       " {'Filename': 'C1597_060.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C1597_081.cnf', 'Time': '235.39'},\n",
+       " {'Filename': 'C168_128.cnf', 'Time': '2.38'},\n",
        " {'Filename': 'C175_145.cnf', 'Time': '--'},\n",
-       " {'Filename': 'C181_3151.cnf', 'Time': '6.69'},\n",
+       " {'Filename': 'C181_3151.cnf', 'Time': '4.09'},\n",
        " {'Filename': 'C200_1806.cnf', 'Time': '--'},\n",
-       " {'Filename': 'C208_120.cnf', 'Time': '0.64'},\n",
-       " {'Filename': 'C208_3254.cnf', 'Time': '1.46'},\n",
-       " {'Filename': 'C210_30.cnf', 'Time': '0.04'},\n",
-       " {'Filename': 'C210_55.cnf', 'Time': '0.58'},\n",
+       " {'Filename': 'C208_120.cnf', 'Time': '1.09'},\n",
+       " {'Filename': 'C208_3254.cnf', 'Time': '2.34'},\n",
+       " {'Filename': 'C210_30.cnf', 'Time': '0.05'},\n",
+       " {'Filename': 'C210_55.cnf', 'Time': '0.23'},\n",
        " {'Filename': 'C243_188.cnf', 'Time': '--'},\n",
        " {'Filename': 'C289_179.cnf', 'Time': '--'},\n",
-       " {'Filename': 'C459_4675.cnf', 'Time': '0.28'},\n",
+       " {'Filename': 'C459_4675.cnf', 'Time': '0.31'},\n",
        " {'Filename': 'C53_895.cnf', 'Time': '--'},\n",
-       " {'Filename': 'U50_1065_038.cnf', 'Time': '46.49'},\n",
-       " {'Filename': 'U50_1065_045.cnf', 'Time': '58.52'},\n",
-       " {'Filename': 'U50_4450_035.cnf', 'Time': '--'},\n",
-       " {'Filename': 'U75_1597_024.cnf', 'Time': '--'}]"
+       " {'Filename': 'U50_1065_038.cnf', 'Time': '37.90'},\n",
+       " {'Filename': 'U50_1065_045.cnf', 'Time': '53.80'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_filepath = \"./results-randomized-dlcs.log\"\n",
+    "log_filepath = \"./log/dpll2-randomized-dlcs.log\" # One-by-one runs\n",
+    "compute_data_from_log(log_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_filepath = \"./log/dpll2-randomized-dlcs.log\" # One-by-one runs\n",
+    "compute_data_from_log(log_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsolved: ['C53_895.cnf', 'C243_188.cnf', 'C175_145.cnf', 'C289_179.cnf', 'C200_1806.cnf', 'U50_4450_035.cnf']\n",
+      "sum: 2713.8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Filename': 'C1065_064.cnf', 'Time': '90.29'},\n",
+       " {'Filename': 'C1065_082.cnf', 'Time': '55.16'},\n",
+       " {'Filename': 'C140.cnf', 'Time': '0.10'},\n",
+       " {'Filename': 'C1597_024.cnf', 'Time': '222.25'},\n",
+       " {'Filename': 'C1597_060.cnf', 'Time': '135.75'},\n",
+       " {'Filename': 'C1597_081.cnf', 'Time': '17.37'},\n",
+       " {'Filename': 'C168_128.cnf', 'Time': '2.62'},\n",
+       " {'Filename': 'C175_145.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C181_3151.cnf', 'Time': '1.72'},\n",
+       " {'Filename': 'C200_1806.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C208_120.cnf', 'Time': '1.70'},\n",
+       " {'Filename': 'C208_3254.cnf', 'Time': '2.82'},\n",
+       " {'Filename': 'C210_30.cnf', 'Time': '0.17'},\n",
+       " {'Filename': 'C210_55.cnf', 'Time': '0.44'},\n",
+       " {'Filename': 'C243_188.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C289_179.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C459_4675.cnf', 'Time': '0.35'},\n",
+       " {'Filename': 'C53_895.cnf', 'Time': '--'},\n",
+       " {'Filename': 'U50_1065_038.cnf', 'Time': '78.33'},\n",
+       " {'Filename': 'U50_1065_045.cnf', 'Time': '81.81'},\n",
+       " {'Filename': 'U50_4450_035.cnf', 'Time': '--'},\n",
+       " {'Filename': 'U75_1597_024.cnf', 'Time': '222.92'}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_filepath = \"./log/dpll2-dlcs-p.log\" # Parallelized runs\n",
+    "compute_data_from_log(log_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsolved: ['C53_895.cnf', 'C243_188.cnf', 'C175_145.cnf', 'C289_179.cnf', 'C200_1806.cnf']\n",
+      "sum: 2736.36\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Filename': 'C1065_064.cnf', 'Time': '120.00'},\n",
+       " {'Filename': 'C1065_082.cnf', 'Time': '67.38'},\n",
+       " {'Filename': 'C140.cnf', 'Time': '0.09'},\n",
+       " {'Filename': 'C1597_024.cnf', 'Time': '273.36'},\n",
+       " {'Filename': 'C1597_060.cnf', 'Time': '37.31'},\n",
+       " {'Filename': 'C1597_081.cnf', 'Time': '182.96'},\n",
+       " {'Filename': 'C168_128.cnf', 'Time': '0.90'},\n",
+       " {'Filename': 'C175_145.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C181_3151.cnf', 'Time': '10.52'},\n",
+       " {'Filename': 'C200_1806.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C208_120.cnf', 'Time': '1.48'},\n",
+       " {'Filename': 'C208_3254.cnf', 'Time': '1.27'},\n",
+       " {'Filename': 'C210_30.cnf', 'Time': '0.18'},\n",
+       " {'Filename': 'C210_55.cnf', 'Time': '0.79'},\n",
+       " {'Filename': 'C243_188.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C289_179.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C459_4675.cnf', 'Time': '0.33'},\n",
+       " {'Filename': 'C53_895.cnf', 'Time': '--'},\n",
+       " {'Filename': 'U50_1065_038.cnf', 'Time': '61.42'},\n",
+       " {'Filename': 'U50_1065_045.cnf', 'Time': '84.03'},\n",
+       " {'Filename': 'U50_4450_035.cnf', 'Time': '120.16'},\n",
+       " {'Filename': 'U75_1597_024.cnf', 'Time': '274.18'}]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_filepath = \"./log/dpll2-dlis-p.log\" # Parallelized runs\n",
+    "compute_data_from_log(log_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsolved: ['C53_895.cnf', 'C1597_081.cnf', 'U75_1597_024.cnf', 'C1597_024.cnf', 'C243_188.cnf', 'C175_145.cnf', 'C289_179.cnf', 'C200_1806.cnf', 'U50_4450_035.cnf', 'C1597_060.cnf']\n",
+      "sum: 3384.57\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Filename': 'C1065_064.cnf', 'Time': '140.81'},\n",
+       " {'Filename': 'C1065_082.cnf', 'Time': '70.10'},\n",
+       " {'Filename': 'C140.cnf', 'Time': '0.29'},\n",
+       " {'Filename': 'C1597_024.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C1597_060.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C1597_081.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C168_128.cnf', 'Time': '1.68'},\n",
+       " {'Filename': 'C175_145.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C181_3151.cnf', 'Time': '16.66'},\n",
+       " {'Filename': 'C200_1806.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C208_120.cnf', 'Time': '1.26'},\n",
+       " {'Filename': 'C208_3254.cnf', 'Time': '1.82'},\n",
+       " {'Filename': 'C210_30.cnf', 'Time': '0.14'},\n",
+       " {'Filename': 'C210_55.cnf', 'Time': '0.90'},\n",
+       " {'Filename': 'C243_188.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C289_179.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C459_4675.cnf', 'Time': '0.23'},\n",
+       " {'Filename': 'C53_895.cnf', 'Time': '--'},\n",
+       " {'Filename': 'U50_1065_038.cnf', 'Time': '54.11'},\n",
+       " {'Filename': 'U50_1065_045.cnf', 'Time': '96.57'},\n",
+       " {'Filename': 'U50_4450_035.cnf', 'Time': '--'},\n",
+       " {'Filename': 'U75_1597_024.cnf', 'Time': '--'}]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_filepath = \"./log/dpll2-randomized-dlis-p.log\" # Parallelized runs\n",
+    "compute_data_from_log(log_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsolved: ['C53_895.cnf', 'C243_188.cnf', 'C175_145.cnf', 'C289_179.cnf', 'C200_1806.cnf', 'U50_4450_035.cnf', 'C1597_060.cnf']\n",
+      "sum: 2449.84\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Filename': 'C1065_064.cnf', 'Time': '75.62'},\n",
+       " {'Filename': 'C1065_082.cnf', 'Time': '52.37'},\n",
+       " {'Filename': 'C140.cnf', 'Time': '0.10'},\n",
+       " {'Filename': 'C1597_024.cnf', 'Time': '37.85'},\n",
+       " {'Filename': 'C1597_060.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C1597_081.cnf', 'Time': '12.32'},\n",
+       " {'Filename': 'C168_128.cnf', 'Time': '2.39'},\n",
+       " {'Filename': 'C175_145.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C181_3151.cnf', 'Time': '2.52'},\n",
+       " {'Filename': 'C200_1806.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C208_120.cnf', 'Time': '1.79'},\n",
+       " {'Filename': 'C208_3254.cnf', 'Time': '4.09'},\n",
+       " {'Filename': 'C210_30.cnf', 'Time': '0.09'},\n",
+       " {'Filename': 'C210_55.cnf', 'Time': '0.56'},\n",
+       " {'Filename': 'C243_188.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C289_179.cnf', 'Time': '--'},\n",
+       " {'Filename': 'C459_4675.cnf', 'Time': '0.20'},\n",
+       " {'Filename': 'C53_895.cnf', 'Time': '--'},\n",
+       " {'Filename': 'U50_1065_038.cnf', 'Time': '78.40'},\n",
+       " {'Filename': 'U50_1065_045.cnf', 'Time': '69.65'},\n",
+       " {'Filename': 'U50_4450_035.cnf', 'Time': '--'},\n",
+       " {'Filename': 'U75_1597_024.cnf', 'Time': '11.89'}]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_filepath = \"./log/dpll2-randomized-dlcs-p.log\" # Parallelized runs\n",
     "compute_data_from_log(log_filepath)"
    ]
   },
