--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +90,7 @@
     "rust_log_dir = \"./log/rust\"\n",
     "rust_log_files = [\n",
     "    \"dpll-dlis.log\",\n",
+    "    \"dpll-dlis-no-unit-clause-copy.log\",\n",
     "    \"dpll-randomized-dlis.log\",\n",
     "    \"dpll-dlcs.log\",\n",
     "    \"dpll-randomized-dlcs.log\",\n",
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +460,7 @@
        "Unsolved                                  10        14  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -497,6 +498,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>dpll-dlis.log</th>\n",
+       "      <th>dpll-dlis-no-unit-clause-copy.log</th>\n",
        "      <th>dpll-randomized-dlis.log</th>\n",
        "      <th>dpll-dlcs.log</th>\n",
        "      <th>dpll-randomized-dlcs.log</th>\n",
@@ -508,6 +510,7 @@
        "    <tr>\n",
        "      <th>C1065_064.cnf</th>\n",
        "      <td>10.50</td>\n",
+       "      <td>10.47</td>\n",
        "      <td>11.31</td>\n",
        "      <td>8.79</td>\n",
        "      <td>8.64</td>\n",
@@ -517,6 +520,7 @@
        "    <tr>\n",
        "      <th>C1065_082.cnf</th>\n",
        "      <td>7.54</td>\n",
+       "      <td>7.38</td>\n",
        "      <td>8.09</td>\n",
        "      <td>5.54</td>\n",
        "      <td>5.87</td>\n",
@@ -525,6 +529,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C140.cnf</th>\n",
+       "      <td>0.02</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.04</td>\n",
        "      <td>0.04</td>\n",
@@ -535,6 +540,7 @@
        "    <tr>\n",
        "      <th>C1597_024.cnf</th>\n",
        "      <td>3.98</td>\n",
+       "      <td>29.75</td>\n",
        "      <td>--</td>\n",
        "      <td>0.31</td>\n",
        "      <td>45.88</td>\n",
@@ -544,6 +550,7 @@
        "    <tr>\n",
        "      <th>C1597_060.cnf</th>\n",
        "      <td>4.99</td>\n",
+       "      <td>5.00</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>37.97</td>\n",
@@ -553,6 +560,7 @@
        "    <tr>\n",
        "      <th>C1597_081.cnf</th>\n",
        "      <td>16.02</td>\n",
+       "      <td>21.11</td>\n",
        "      <td>22.09</td>\n",
        "      <td>2.36</td>\n",
        "      <td>4.25</td>\n",
@@ -562,6 +570,7 @@
        "    <tr>\n",
        "      <th>C168_128.cnf</th>\n",
        "      <td>1.72</td>\n",
+       "      <td>1.56</td>\n",
        "      <td>1.93</td>\n",
        "      <td>1.94</td>\n",
        "      <td>2.27</td>\n",
@@ -576,10 +585,12 @@
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
+       "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C181_3151.cnf</th>\n",
        "      <td>2.07</td>\n",
+       "      <td>1.20</td>\n",
        "      <td>0.32</td>\n",
        "      <td>0.60</td>\n",
        "      <td>0.59</td>\n",
@@ -594,10 +605,12 @@
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
+       "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C208_120.cnf</th>\n",
        "      <td>5.54</td>\n",
+       "      <td>7.25</td>\n",
        "      <td>7.12</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.17</td>\n",
@@ -607,6 +620,7 @@
        "    <tr>\n",
        "      <th>C208_3254.cnf</th>\n",
        "      <td>0.60</td>\n",
+       "      <td>0.61</td>\n",
        "      <td>0.92</td>\n",
        "      <td>0.53</td>\n",
        "      <td>0.76</td>\n",
@@ -621,10 +635,12 @@
        "      <td>0.01</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C210_55.cnf</th>\n",
        "      <td>0.85</td>\n",
+       "      <td>0.84</td>\n",
        "      <td>0.96</td>\n",
        "      <td>0.13</td>\n",
        "      <td>0.16</td>\n",
@@ -633,6 +649,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C243_188.cnf</th>\n",
+       "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
@@ -648,10 +665,12 @@
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
+       "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>C459_4675.cnf</th>\n",
        "      <td>0.04</td>\n",
+       "      <td>0.03</td>\n",
        "      <td>0.04</td>\n",
        "      <td>0.04</td>\n",
        "      <td>0.05</td>\n",
@@ -666,10 +685,12 @@
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
+       "      <td>--</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>U50_1065_038.cnf</th>\n",
        "      <td>7.11</td>\n",
+       "      <td>7.45</td>\n",
        "      <td>8.52</td>\n",
        "      <td>6.04</td>\n",
        "      <td>6.21</td>\n",
@@ -679,6 +700,7 @@
        "    <tr>\n",
        "      <th>U50_1065_045.cnf</th>\n",
        "      <td>9.73</td>\n",
+       "      <td>9.42</td>\n",
        "      <td>10.72</td>\n",
        "      <td>7.80</td>\n",
        "      <td>8.35</td>\n",
@@ -688,6 +710,7 @@
        "    <tr>\n",
        "      <th>U50_4450_035.cnf</th>\n",
        "      <td>27.14</td>\n",
+       "      <td>1.67</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
        "      <td>--</td>\n",
@@ -697,6 +720,7 @@
        "    <tr>\n",
        "      <th>U75_1597_024.cnf</th>\n",
        "      <td>4.14</td>\n",
+       "      <td>2.90</td>\n",
        "      <td>1.39</td>\n",
        "      <td>6.21</td>\n",
        "      <td>0.93</td>\n",
@@ -706,6 +730,7 @@
        "    <tr>\n",
        "      <th>Score</th>\n",
        "      <td>1602.0</td>\n",
+       "      <td>1606.67</td>\n",
        "      <td>2473.46</td>\n",
        "      <td>2140.46</td>\n",
        "      <td>1922.13</td>\n",
@@ -714,6 +739,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unsolved</th>\n",
+       "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>8</td>\n",
        "      <td>7</td>\n",
@@ -726,31 +752,57 @@
        "</div>"
       ],
       "text/plain": [
-       "                 dpll-dlis.log dpll-randomized-dlis.log dpll-dlcs.log  \\\n",
-       "C1065_064.cnf            10.50                    11.31          8.79   \n",
-       "C1065_082.cnf             7.54                     8.09          5.54   \n",
-       "C140.cnf                  0.02                     0.04          0.04   \n",
-       "C1597_024.cnf             3.98                       --          0.31   \n",
-       "C1597_060.cnf             4.99                       --            --   \n",
-       "C1597_081.cnf            16.02                    22.09          2.36   \n",
-       "C168_128.cnf              1.72                     1.93          1.94   \n",
-       "C175_145.cnf                --                       --            --   \n",
-       "C181_3151.cnf             2.07                     0.32          0.60   \n",
-       "C200_1806.cnf               --                       --            --   \n",
-       "C208_120.cnf              5.54                     7.12          0.12   \n",
-       "C208_3254.cnf             0.60                     0.92          0.53   \n",
-       "C210_30.cnf               0.01                     0.01          0.01   \n",
-       "C210_55.cnf               0.85                     0.96          0.13   \n",
-       "C243_188.cnf                --                       --            --   \n",
-       "C289_179.cnf                --                       --            --   \n",
-       "C459_4675.cnf             0.04                     0.04          0.04   \n",
-       "C53_895.cnf                 --                       --            --   \n",
-       "U50_1065_038.cnf          7.11                     8.52          6.04   \n",
-       "U50_1065_045.cnf          9.73                    10.72          7.80   \n",
-       "U50_4450_035.cnf         27.14                       --            --   \n",
-       "U75_1597_024.cnf          4.14                     1.39          6.21   \n",
-       "Score                   1602.0                  2473.46       2140.46   \n",
-       "Unsolved                     5                        8             7   \n",
+       "                 dpll-dlis.log dpll-dlis-no-unit-clause-copy.log  \\\n",
+       "C1065_064.cnf            10.50                             10.47   \n",
+       "C1065_082.cnf             7.54                              7.38   \n",
+       "C140.cnf                  0.02                              0.02   \n",
+       "C1597_024.cnf             3.98                             29.75   \n",
+       "C1597_060.cnf             4.99                              5.00   \n",
+       "C1597_081.cnf            16.02                             21.11   \n",
+       "C168_128.cnf              1.72                              1.56   \n",
+       "C175_145.cnf                --                                --   \n",
+       "C181_3151.cnf             2.07                              1.20   \n",
+       "C200_1806.cnf               --                                --   \n",
+       "C208_120.cnf              5.54                              7.25   \n",
+       "C208_3254.cnf             0.60                              0.61   \n",
+       "C210_30.cnf               0.01                              0.01   \n",
+       "C210_55.cnf               0.85                              0.84   \n",
+       "C243_188.cnf                --                                --   \n",
+       "C289_179.cnf                --                                --   \n",
+       "C459_4675.cnf             0.04                              0.03   \n",
+       "C53_895.cnf                 --                                --   \n",
+       "U50_1065_038.cnf          7.11                              7.45   \n",
+       "U50_1065_045.cnf          9.73                              9.42   \n",
+       "U50_4450_035.cnf         27.14                              1.67   \n",
+       "U75_1597_024.cnf          4.14                              2.90   \n",
+       "Score                   1602.0                           1606.67   \n",
+       "Unsolved                     5                                 5   \n",
+       "\n",
+       "                 dpll-randomized-dlis.log dpll-dlcs.log  \\\n",
+       "C1065_064.cnf                       11.31          8.79   \n",
+       "C1065_082.cnf                        8.09          5.54   \n",
+       "C140.cnf                             0.04          0.04   \n",
+       "C1597_024.cnf                          --          0.31   \n",
+       "C1597_060.cnf                          --            --   \n",
+       "C1597_081.cnf                       22.09          2.36   \n",
+       "C168_128.cnf                         1.93          1.94   \n",
+       "C175_145.cnf                           --            --   \n",
+       "C181_3151.cnf                        0.32          0.60   \n",
+       "C200_1806.cnf                          --            --   \n",
+       "C208_120.cnf                         7.12          0.12   \n",
+       "C208_3254.cnf                        0.92          0.53   \n",
+       "C210_30.cnf                          0.01          0.01   \n",
+       "C210_55.cnf                          0.96          0.13   \n",
+       "C243_188.cnf                           --            --   \n",
+       "C289_179.cnf                           --            --   \n",
+       "C459_4675.cnf                        0.04          0.04   \n",
+       "C53_895.cnf                            --            --   \n",
+       "U50_1065_038.cnf                     8.52          6.04   \n",
+       "U50_1065_045.cnf                    10.72          7.80   \n",
+       "U50_4450_035.cnf                       --            --   \n",
+       "U75_1597_024.cnf                     1.39          6.21   \n",
+       "Score                             2473.46       2140.46   \n",
+       "Unsolved                                8             7   \n",
        "\n",
        "                 dpll-randomized-dlcs.log dpll-dlis-dm.log dpll-dlis-dm2.log  \n",
        "C1065_064.cnf                        8.64            10.13             10.24  \n",
@@ -779,7 +831,7 @@
        "Unsolved                                6                5                 5  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +872,7 @@
        " ('C243_188.cnf', 30512332)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,6 +886,20 @@
     "\n",
     "sorted(d.items(), key=lambda x: x[1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
